--- a/home/public/locales/fa/home.json
+++ b/home/public/locales/fa/home.json
@@ -3,11 +3,45 @@
     "title": "این صفحه اصلی است",
     "signOut": "خروج از سیستم",
     "language": "زبان",
-    "header_login": "وارد شدن",
+    "header_login": "ورود",
+    "header_contact": "تماس",
     "header_register": "ثبت نام",
     "header_theme": "حالت تم",
     "header_dark": "تیره",
     "header_light": "روشن",
     "header_language": "زبان"
+  },
+  "promotion": {
+    "promo_btn1": "خریداری کنید",
+    "promo_btn2": "به سبد خرید اضافه کنید"
+  },
+  "featured": {
+    "titlePrimary": "ویژه",
+    "titleSecondary": "محصول",
+    "thumbCaption": "جدید"
+  },
+  "trending": {
+    "title": "محصولات محبوب",
+    "desc": "از بین بسیاری از گزینه های محصولات محبوب با قیمتی استثنایی انتخاب کنید.",
+    "explore": "کاوش کنید"
+  },
+  "categories": {
+    "title": "کاوش دسته ها",
+    "desc": "از بین 10 دسته بندی با افزودنی های جدید که هر ماه منتشر می شود، انتخاب کنید.",
+    "allCategories": "همه دسته بندی ها"
+  },
+  "about": {
+    "title": "درباره ما",
+    "desc": "ماموریت ما تنوع بخشیدن به صنعت فناوری از طریق آموزش و کارآموزی در دسترس، باز کردن قفل فرصت ها و توانمندسازی افراد برای رسیدن به رویاهایشان است.",
+    "join": "ملحق شوید"
+  },
+  "testimonials": {
+    "title": "توصیفات",
+    "desc": "آنها در حال انجام کارهای بزرگ با ما هستند"
+  },
+  "blog": {
+    "title": "به روز رسانی چیست؟",
+    "desc": "اخبار لحظه به لحظه، اخبار فوری، ویدیویی، صوتی و داستان های ویژه",
+    "more": "بیشتر"
   }
 }
