--- a/admin/public/locales/en/common.json
+++ b/admin/public/locales/en/common.json
@@ -4,7 +4,7 @@
   "login_title": "Welcome back",
   "login_subtitle": "Please login to continue",
   "login": "Login",
-  "login_or": "Or login with email",
+  "login_or": "login with email",
   "login_email": "Email",
   "form_require": "This field is required",
   "form_email_require": "Email is not valid",
@@ -25,7 +25,27 @@
   "register_subtitle": "Just register to join with us",
   "form_terms": "I have read and accept the Terms of",
   "form_privacy": "Service & Privacy Policy *",
-  "facebook": "Facebook",
-  "twitter": "Twitter",
-  "google": "Google"
+  "light": "Light",
+  "dark": "Dark",
+  "joker": "Pink",
+  "cloud": "Dark blue",
+  "greenLeaf": "Jungle green",
+  "money": "Light orange",
+  "grayscale": "Gray",
+  "violet": "Dark Violet",
+  "violeta": "Light Violet",
+  "violate": "Light Green",
+  "deepBlue": "Sky blue",
+  "ubuntu": "Dark orange",
+  "geenNature": "Dark green",
+  "vampire": "Dark red",
+  "gold": "Gold",
+  "botani": "Light green",
+  "littleQueen": "Light Blue",
+  "brown": "Brown",
+  "oceanBlue": "Blue ocean",
+  "Wrong Email": "Email is wrong",
+  "Wrong password": "Password is wrong",
+  "serverError": "Somethings go wrong please contact admin.",
+  "notAdmin": "You do not have access to admin panel."
 }
