--- a/admin/public/locales/fa/common.json
+++ b/admin/public/locales/fa/common.json
@@ -1,10 +1,10 @@
 {
-  "title": "صفحه ورود",
+  "title_login": "صفحه ورود",
   "title_register": "صفحه ثبت نام",
-  "login_title": "خوش اومدی",
+  "login_title": "خوش آمدی",
   "login_subtitle": "لطفا برای ادامه وارد شوید",
   "login": "ورود",
-  "login_or": "یا با ایمیل وارد شوید",
+  "login_or": " با ایمیل وارد شوید",
   "login_email": " ایمیل",
   "form_require": "این فیلد الزامی است",
   "form_email_require": "ایمیل معتبر نیست",
@@ -25,7 +25,27 @@
   "register_subtitle": "برای پیوستن به ما کافیست ثبت نام کنید",
   "form_terms": "من شرایط را خوانده ام و می پذیرم",
   "form_privacy": "خدمات و سیاست حفظ حریم خصوصی *",
-  "facebook": "فیس بوک",
-  "twitter": "توییتر",
-  "google": "گوگل"
+  "light": "روشن",
+  "dark": "تیره",
+  "joker": "صورتی",
+  "cloud": "آبی تیره",
+  "greenLeaf": "سبز جنگلی",
+  "money": "نارنجی روشن",
+  "grayscale": "خاکستری",
+  "violet": "بنفش تیره",
+  "violeta": "بنفش روشن",
+  "violate": "سبز روشن",
+  "deepBlue": "آبی آسمانی",
+  "ubuntu": "نارنجی تیره",
+  "geenNature": "سبز تیره",
+  "vampire": "قرمز تیره",
+  "gold": "طلا",
+  "botani": "سبز روشن",
+  "littleQueen": "آبی روشن",
+  "brown": "قهوه ای",
+  "oceanBlue": "آبی اقیانوسی",
+  "Wrong Email": "ایمیل اشتباه است",
+  "Wrong password": "رمز عبور اشتباه است",
+  "serverError": "مشکلی پیش آمده است لطفا با ادمین تماس بگیرید.",
+  "notAdmin": "شما به پنل مدیریت دسترسی ندارید."
 }
