--- a/home/public/locales/en/auth.json
+++ b/home/public/locales/en/auth.json
@@ -27,5 +27,7 @@
   "form_privacy": "Service & Privacy Policy *",
   "facebook": "Facebook",
   "twitter": "Twitter",
-  "google": "Google"
+  "google": "Google",
+  "Wrong Email": "Email is wrong",
+  "Wrong password": "Password is wrong"
 }
