--- a/home/public/locales/fa/auth.json
+++ b/home/public/locales/fa/auth.json
@@ -1,5 +1,5 @@
 {
-  "title": "صفحه ورود",
+  "title_login": "صفحه ورود",
   "title_register": "صفحه ثبت نام",
   "login_title": "خوش اومدی",
   "login_subtitle": "لطفا برای ادامه وارد شوید",
@@ -27,5 +27,7 @@
   "form_privacy": "خدمات و سیاست حفظ حریم خصوصی *",
   "facebook": "فیس بوک",
   "twitter": "توییتر",
-  "google": "گوگل"
+  "google": "گوگل",
+  "Wrong Email": "ایمیل اشتباه است",
+  "Wrong password": "رمز عبور اشتباه است"
 }
