--- a/admin/public/locales/fa/common.json
+++ b/admin/public/locales/fa/common.json
@@ -47,5 +47,9 @@
   "Wrong Email": "ایمیل اشتباه است",
   "Wrong password": "رمز عبور اشتباه است",
   "serverError": "مشکلی پیش آمده است لطفا با ادمین تماس بگیرید.",
-  "notAdmin": "شما به پنل مدیریت دسترسی ندارید."
+  "notAdmin": "شما به پنل مدیریت دسترسی ندارید.",
+  "theme": "زمینه ها",
+  "combination": "ترکیب رنگ ها",
+  "homeTheme": "تم صفحه اصلی",
+  "adminTheme": "تم صفحه مدیریت"
 }
